oneuptime/http-route.sops.yaml
---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oneuptime
spec:
  hostnames:
    - ENC[AES256_GCM,data:+GrflU1eJeAnZ2T0KQ==,iv:3K7MupmMN0sT0zYbjE64PO+M85sI8VYD4hdXrwsdtzk=,tag:P8NN6rLpw5bGFOalJAp6zA==,type:str]
    - ENC[AES256_GCM,data:A5QIkjXWGm6GDAyqSamqAA==,iv:58KwoPUWLwYEhfSbW66gHSh/fsoVEvRBiH3iI2hkrj4=,tag:YuTuKxNX8e5YTvtV1CDPHw==,type:str]
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: oneuptime-nginx
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
sops:
  age:
    - recipient: age1mz6mvlp9fu44qpr29lrpuw57y9akt8upx7w43zdz83kgatnufu7q7mvtvr
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpbzU0NzVOa3RyMGQ1ZHIv
[...]
        zRAPPR0ITe4VSHTkgfkQfqMibl9gW61m60lzYCOBPKcMaCf6VESxyQ==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2025-09-30T05:11:37Z"
  mac: ENC[AES256_GCM,data:ds4MGlTYoDVh+nkHlAaTlHzeZJ9P8/iK5yNojf1oB/r2ajBMH5n2QoV60JSLuR+eMdp2S08BXbKYQ29uYo6iiwyTXIDVve5knQNFR6XKl98dOMlntLjUeAahwRhbZSy1keLaWJ0ux2eLDz0DkZHDn8pT39cdRSEG502L/uRwWKI=,iv:VtqJ/x2PF4vKvsv+IbxZl7kT2GFchsC57Pgwx3CbGzA=,tag:aFMMMCRkfXV36ww0zRxwXg==,type:str]
  encrypted_regex: ^(data|hostname|hostnames)$
  version: 3.10.2
